# Convexity-Technologies-Internship

./: .gitignore  Convexity Technologies Internship.sln  LICENSE
Week-1-Day-3/: Week-1-Day-3.csproj
Week-1-Day-3/csharp/: Program.cs
Week-1/Day-4-Thursday/calculator/src/: main.rs  rough-work.txt
Week-2/Day-1/python/: main.py
Week-2/Day-2/rust-oop/: Cargo.toml
Week-2/Day-2/rust-oop/src/: controller.rs  main.rs  model.rs  view.rs
Week-2/Day-2/user-login/: Cargo.toml
Week-2/Day-2/user-login/src/: controller.rs  main.rs  model.rs  view.rs
Week-2/Day-3/to-do-list/: Cargo.toml
Week-2/Day-3/to-do-list/src/: controller.rs  main.rs  (+2 more)
Week-3/Day-5/tcp/: client.js  package.json  server.js
Week-4/Day-1/scheduler/: Cargo.toml  conference_data.json
Week-4/Day-3/mysql_test/: Cargo.toml
Week-4/Day-5 - Copy/guntomyhead/: Cargo.toml
Week-4/Day-5/trading_app/: Cargo.toml
Week-4/Day-5/trading_app/src/: controllers.rs  db.rs  main.rs
Week-4/Day-5/trading_app/static/css/: desktop_1.css  globals.css  style.css  styles.css  styles2.css
Week-4/Day-5/trading_app/static/css/dashboard/: globals.css  style.css
Week-4/Day-5/trading_app/static/css/market/: globals.css  style.css  styleguide.css
Week-4/Day-5/trading_app/static/css/transactions/: globals.css  style.css  styleguide.css
Week-4/Day-5/trading_app/static/css/wallet/: globals.css  style.css  styleguide.css
Week-4/Day-5/trading_app/templates/: create_user.html  dashboard.html  home.html  home_backup.html  index.html  login.html  market.html  order_history.html  trading.html  transactions.html  wallet.html
(+33 files in other folders)
