[package]
name = "trading_app"
version = "0.1.0"
edition = "2021"

[dependencies]
mysql = "20.0"
bcrypt = "0.12"
actix-web = "4.0"
actix-web-actors = "4"
actix-rt = "2"
actix-session = "0.5"
actix-identity = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tera = "1.12"  # for templating

actix-files = "0.6"
tokio = { version = "1", features = ["full"] }
